# plippet

./: .gitignore  Cargo.toml  README.md
examples/: snippets.toml
src/: clipboard.rs  config.rs  gui.rs  injector.rs  main.rs  picker.rs  snippet.rs  tools.rs
