[package]
name = "plippet"
version = "0.1.0"
edition = "2021"
description = "A small Wayland-friendly hotkey snippet picker"
license = "MIT"

[features]
default = ["gui"]
gui = ["dep:eframe"]

[dependencies]
anyhow      = "1"
ashpd       = "0.12"
clap        = { version = "4", features = ["derive"] }
directories = "5"
eframe      = { version = "0.29", optional = true, default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
serde       = { version = "1", features = ["derive"] }
tokio       = { version = "1", features = ["rt"] }
toml        = "0.8"

[dev-dependencies]
tempfile    = "3"
